@@ -1,5 +1,8 @@
 ; This file is generated from dist.ini.meta by dzil bakeini.
 ; Edit that file or the bundles contained within for long-term changes.
+; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 1.8.3 at Thu Sep  5 01:09:10 2013
+; vim: syntax=dosini
+; Uncomment this to bootstrap via self
 name = Dist-Zilla-Plugin-Bootstrap-ShareDir-Module
 author = Kent Fredric <kentnl@cpan.org>
 license = Perl_5
@@ -22,9 +25,11 @@ issues = 1
 :version = 1.14000001
 
 [MetaData::BuiltWith / @Author::KENTNL/MetaData::BuiltWith]
+:version = 1.004000
 show_config = 1
 show_uname = 1
 uname_args = -s -o -r -m -i
+use_external_file = only
 
 [Git::Contributors / @Author::KENTNL/Git::Contributors]
 :version = 0.006
@@ -47,6 +52,8 @@ include_dotfiles = 1
 
 [Manifest / @Author::KENTNL/Manifest]
 
+[Author::KENTNL::TravisCI / @Author::KENTNL/Author::KENTNL::TravisCI]
+
 [CopyFilesFromBuild / @Author::KENTNL/CopyXBuild]
 copy = LICENSE
 
@@ -60,7 +67,7 @@ copy = LICENSE
 
 [Test::Kwalitee / @Author::KENTNL/Test::Kwalitee]
 
-[EOLTests / @Author::KENTNL/EOLTests]
+[Test::EOL / @Author::KENTNL/Test::EOL]
 trailing_whitespace = 1
 
 [Test::MinimumVersion / @Author::KENTNL/Test::MinimumVersion]
@@ -84,7 +91,9 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.020000
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.023002
+
+[Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
 
@@ -100,7 +109,7 @@ default_jobs = 10
 [Author::KENTNL::RecommendFixes / @Author::KENTNL/Author::KENTNL::RecommendFixes]
 :version = 0.001001
 
-[ReadmeFromPod / @Author::KENTNL/ReadmeFromPod]
+[Readme::Brief / @Author::KENTNL/ShippedReadme]
 
 [ReadmeAnyFromPod / @Author::KENTNL/ReadmeAnyFromPod]
 filename = README.mkdn
@@ -125,7 +134,8 @@ filename = Changes
 tag_format = %v-source
 
 [Git::NextRelease / @Author::KENTNL/Git::NextRelease]
-format = %v %{yyyy-MM-dd'T'HH:mm:ss}dZ
+:version = 0.004000
+format = %v %{yyyy-MM-dd'T'HH:mm:ss}dZ %h
 time_zone = UTC
 
 [BumpVersionAfterRelease / @Author::KENTNL/BumpVersionAfterRelease]
@@ -143,13 +153,20 @@ tag_format = %v
 [UploadToCPAN / @Author::KENTNL/UploadToCPAN]
 
 [Twitter / @Author::KENTNL/Twitter]
-hash_tags = #perl #cpan
+hash_tags = #perl #cpan #distzilla
 tweet_url = https://metacpan.org/release/{{$AUTHOR_UC}}/{{$DIST}}-{{$VERSION}}{{$TRIAL}}#whatsnew
 url_shortener = none
 
-[Prereqs::Recommend::MatchInstalled / @Author::KENTNL/Prereqs::Recommend::MatchInstalled]
-modules = ExtUtils::MakeMaker
-modules = Test::More
+[Prereqs::Upgrade / @Author::KENTNL/Prereqs::Upgrade]
+Dist::Zila::Plugin::MetaProvides::Package = 2.000000
+Dist::Zilla = 5
+ExtUtils::MakeMaker = 7.00
+File::ShareDir::Install = 0.10
+Moo = 1.000008
+Moose = 2.000
+Path::Tiny = 0.058
+Test::File::ShareDir = 1.000000
+Test::More = 0.99
 
 [Prereqs::Recommend::MatchInstalled / @Author::KENTNL/always_latest_develop_bundle]
 applyto_map = develop.suggests = develop.suggests
@@ -158,21 +175,30 @@ modules = Dist::Zilla::PluginBundle::Author::KENTNL
 modules = Dist::Zilla::App::Command::bakeini
 
 [Prereqs / @Author::KENTNL/::Role::BundleDeps]
+; version_major     = 0
+; version_minor     = 1
+; the following data denotes when this minor was minted
+; version_rel_year  = 2013
+; version_rel_month = 9
+; version_rel_day   = 5
+; version_rel_hour  = 1
+; version_rel_time_zone = Pacific/Auckland
+; auto_prereqs_skip = File::Find
 -phase = develop
 -relationship = requires
 Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.001001
+Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0
 Dist::Zilla::Plugin::Authority = 1.006
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::BumpVersionAfterRelease = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
 Dist::Zilla::Plugin::CopyFilesFromBuild = 0
-Dist::Zilla::Plugin::EOLTests = 0
 Dist::Zilla::Plugin::Git::Check = 0
 Dist::Zilla::Plugin::Git::Commit = 0
 Dist::Zilla::Plugin::Git::CommitBuild = 0
 Dist::Zilla::Plugin::Git::Contributors = 0.006
 Dist::Zilla::Plugin::Git::GatherDir = 0
-Dist::Zilla::Plugin::Git::NextRelease = 0
+Dist::Zilla::Plugin::Git::NextRelease = 0.004000
 Dist::Zilla::Plugin::Git::Tag = 0
 Dist::Zilla::Plugin::GithubMeta = 0
 Dist::Zilla::Plugin::License = 0
@@ -180,7 +206,7 @@ Dist::Zilla::Plugin::MakeMaker = 0
 Dist::Zilla::Plugin::Manifest = 0
 Dist::Zilla::Plugin::ManifestSkip = 0
 Dist::Zilla::Plugin::MetaConfig = 0
-Dist::Zilla::Plugin::MetaData::BuiltWith = 0
+Dist::Zilla::Plugin::MetaData::BuiltWith = 1.004000
 Dist::Zilla::Plugin::MetaJSON = 0
 Dist::Zilla::Plugin::MetaProvides::Package = 1.14000001
 Dist::Zilla::Plugin::MetaTests = 0
@@ -190,13 +216,16 @@ Dist::Zilla::Plugin::PodCoverageTests = 0
 Dist::Zilla::Plugin::PodSyntaxTests = 0
 Dist::Zilla::Plugin::PodWeaver = 0
 Dist::Zilla::Plugin::Prereqs = 0
+Dist::Zilla::Plugin::Prereqs::AuthorDeps = 0
 Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
+Dist::Zilla::Plugin::Prereqs::Upgrade = 0
+Dist::Zilla::Plugin::Readme::Brief = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
-Dist::Zilla::Plugin::ReadmeFromPod = 0
 Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
 Dist::Zilla::Plugin::Test::Compile::PerFile = 0
+Dist::Zilla::Plugin::Test::EOL = 0
 Dist::Zilla::Plugin::Test::Kwalitee = 0
 Dist::Zilla::Plugin::Test::MinimumVersion = 0
 Dist::Zilla::Plugin::Test::Perl::Critic = 0
