@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 1.8.3 at Thu Sep  5 01:09:10 2013
+; vim: syntax=dosini
 name             = Dist-Zilla-Plugin-Bootstrap-ShareDir-Module
 author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
@@ -14,8 +15,8 @@ try_built = 1
 Bootstrap::ShareDir::Module = share/B-SD-M
 
 [@Author::KENTNL]
-:version          = 2.020
-twitter_hash_tags = #perl #cpan
+:version          = 2.023
+twitter_extra_hash_tags = #distzilla
 normal_form       = numify
 mantissa          = 6
 toolkit           = eumm
