@@ -1,6 +1,12 @@
 Release history for Dist-Zilla-Plugin-Bootstrap-ShareDir-Module
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 1.001000, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +10 ↑2 -2 (recommends: +1, suggests: ↑2)
+ - runtime: (recommends: +2)
+ - test: +1 (recommends: ↑1 ↓1)
 
 1.001000 2014-08-31T14:00:46Z
  [00 Minor]
